add images and minor changes

--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "i": "^0.3.7",
@@ -18,8 +18,8 @@
     "swagger-ui-express": "^5.0.1"
   },
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "nodemon app.js",
+    "dev": "npm start"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
