--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,9 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.1",
-    "react-toastify": "^11.0.5"
+    "react-slick": "^0.31.0",
+    "react-toastify": "^11.0.5",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
